* Fixed issue with reading the data- attributes. #2430

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,13 +1,18 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
-    <h2>Version 6-alpha16</h2> <h3>New</h3>
+    <h2>Version 6-alpha16</h2>
+    <h3>New</h3>
     <ul>
-
+      <li>Started building html migration tool</li>
     </ul>
     <h3>Bug fixes</h3>
     <ul>
-      <li>Fixed start of the week option having the incorrect heading. <a href='https://github.com/Eonasdan/tempus-dominus/issues/2414'>#2443</a>
+      <li>Fixed issue with reading the data- attributes. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2430'>#2430</a>
+      </li>
+      <li>Fixed start of the week option having the incorrect heading. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2414'>#2443</a>
       </li>
     </ul>
     <h2>Version 6-alpha15</h2>
@@ -42,8 +47,9 @@
       <li>Fixed the options interface so all properties are optionsal. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2439'>#2439</a>
       </li>
-      <li><span class='badge bg-danger'>BREAKING</span> <code>localization.dayViewHeaderFormat</code> no longer takes a string but instead accepts a <code>DateTimeFormatOptions</code>. This will allow for more customization. <a
-        href='https://github.com/Eonasdan/tempus-dominus/issues/2420'>#2420</a>
+      <li><span class='badge bg-danger'>BREAKING</span> <code>localization.dayViewHeaderFormat</code> no longer takes a
+        string but instead accepts a <code>DateTimeFormatOptions</code>. This will allow for more customization. <a
+          href='https://github.com/Eonasdan/tempus-dominus/issues/2420'>#2420</a>
       </li>
     </ul>
   </section>
