--- a/src/docs/partials/migration.html
+++ b/src/docs/partials/migration.html
@@ -42,13 +42,31 @@
           </div>
           <div class='col'>
             <label for='to' class='form-label'>Output</label>
-            <textarea id='to' class='form-control' readonly>
-     </textarea>
+            <textarea id='to' class='form-control' readonly></textarea>
           </div>
         </div>
       </div>
       <div class='tab-pane fade' id='nav-migration-html' role='tabpanel' aria-labelledby='nav-migration-html-tab'>
-        coming soon
+        <div class='row'>
+          <div class='col'>
+            <label for='fromHtml' class='form-label'>Input</label>
+            <textarea id='fromHtml' class='form-control'>
+<div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+    <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
+    <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+    </div>
+</div>
+            </textarea>
+          </div>
+          <div class='col-sm-1'>
+            <button class='btn btn-primary' id='convertButtonHtml'><i class='fas fa-angle-double-right'></i></button>
+          </div>
+          <div class='col'>
+            <label for='toHtml' class='form-label'>Output</label>
+            <textarea id='toHtml' class='form-control' readonly></textarea>
+          </div>
+        </div>
       </div>
     </div>
     <div class='row mt-3'>
@@ -97,45 +115,6 @@
       </p>
     </div>
   </div>
-  <style>
-      textarea {
-          height: 60vh;
-      }
-
-      /* hide the right side toc to give more room */
-      @media (min-width: 768px) {
-          .bd-main {
-              display: grid;
-              gap: inherit;
-              grid-template-areas: "intro" "content";
-              grid-template-rows: auto auto 1fr;
-          }
-
-          #convertButton {
-              position: relative;
-              top: 50%;
-          }
-      }
-
-      @media (min-width: 992px) {
-          .bd-main {
-              grid-template-areas: "intro" "content";
-              grid-template-columns: 4fr;
-              grid-template-rows: auto 1fr;
-          }
-      }
-
-      #alert {
-          max-height: 20vh;
-          overflow-y: scroll;
-      }
-
-      .tab-content > .active {
-           min-height: initial;
-           max-height: initial;
-           overflow-y: initial;
-      }
-  </style>
 </page-body>
 <page-meta>
   <title>Migration</title>
