Fixed issue with daysOfWeekDisabled #2419

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -8,6 +8,9 @@
     </ul>
     <h3>Bug fixes</h3>
     <ul>
+      <li>Fixed issue with daysOfWeekDisabled. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2419'>#2419</a>
+      </li>
       <li>Fixed issue with reading the data- attributes. <a
         href='https://github.com/Eonasdan/tempus-dominus/issues/2430'>#2430</a>
       </li>
