--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,13 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>Version 6-alpha17</h2>
+    <h3>Bug fixes</h3>
+    <ul>
+      <li>Fixed issue with calendar weeks. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2441'>#2441</a>
+      </li>
+    </ul>
     <h2>Version 6-alpha16</h2>
     <h3>New</h3>
     <ul>
