fix(jquery): Fix wrong jquery example of container option.

--- a/src/docs/partials/examples/jquery.html
+++ b/src/docs/partials/examples/jquery.html
@@ -1938,8 +1938,8 @@ changeOptionsButton.addEventListener('click', () => {
         <div class='tab-pane fade' id='container-optionJs' role='tabpanel' aria-labelledby='container-optionJs-tab'>
          <pre>
            <code class='language-javascript'>
-$('div[id="containerDatePicker"]').tempusDominus({
-  container: $('div[id="parent-container"]'),
+$('#containerDatePicker').tempusDominus({
+  container: $('div[id="parent-container"]')[0],
 });
            </code>
          </pre>
