clean code cleaning. testing Cognitive Complexity

--- a/src/docs/partials/change-log.html
+++ b/src/docs/partials/change-log.html
@@ -1,6 +1,25 @@
 <page-body>
   <section>
     <h1>Version 6</h1>
+    <h2>Version 6-beta3</h2>
+    <h3>New</h3>
+    <ul>
+      <li>Allow to change parent container for the widget <a
+        href='https://github.com/Eonasdan/tempus-dominus/pull/2462'>via #2462</a>.</li>
+      <li>Moved docs to gh-pages and setup a github action to move compiled docs to that branch.</li>
+    </ul>
+    <h3>Bug fixes</h3>
+    <ul>
+      <li>Issue with time picker only & fixing range example <a
+        href='https://github.com/Eonasdan/tempus-dominus/pull/2463'>via #2463.</a>
+      </li>
+      <li>Fixed issue with reading the data- attributes. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2430'>#2430</a>
+      </li>
+      <li>Fixed start of the week option having the incorrect heading. <a
+        href='https://github.com/Eonasdan/tempus-dominus/issues/2414'>#2443</a>
+      </li>
+    </ul>
     <h2>Version 6-alpha17</h2>
     <h3>Bug fixes</h3>
     <ul>
