--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -21,6 +21,8 @@
                    class='d-inline-flex align-items-center rounded' aria-current='page'>Options</a></li>
             <li><a href='/6/datetime.html'
                    class='d-inline-flex align-items-center rounded' aria-current='page'>DateTime</a></li>
+            <li><a href='/6/locale.html'
+                   class='d-inline-flex align-items-center rounded' aria-current='page'>Locales</a></li>
           </ul>
         </div>
       </li>
@@ -53,6 +55,21 @@
             </li>
             <li><a href='/6/examples/jquery.html' class='d-inline-flex align-items-center rounded'>jQuery</a></li>
             <li><a href='/6/examples/no-styles.html' class='d-inline-flex align-items-center rounded'>No Styles</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class='mb-1'>
+        <button class='btn d-inline-flex align-items-center rounded collapsed' data-bs-toggle='collapse'
+                data-bs-target='#plugins-collapse' aria-expanded='false'>
+          Plugins
+        </button>
+
+        <div class='collapse' id='plugins-collapse'>
+          <ul class='list-unstyled fw-normal pb-1 small'>
+            <li><a href='/6/plugins/' class='d-inline-flex align-items-center rounded'>Overview</a>
+            </li>
+            <li><a href='/6/plugins/fa6.html' class='d-inline-flex align-items-center rounded'>Font Awesome 6</a></li>
             </li>
           </ul>
         </div>
