--- a/src/docs/partials/installing.html
+++ b/src/docs/partials/installing.html
@@ -5,16 +5,8 @@
     </p>
   </section>
   <section>
-    <h2>Compiled Code</h2>
-    <p>
-      You can grab the compiled js and css from <a href='https://github.com/Eonasdan/tempus-dominus/tree/master/dist'
-                                                   target='_blank' rel='noopener'>GitHub</a>
-    </p>
-    <p>You still need to get Popper yourself.</p>
-  </section>
-  <section>
-  <h2>Via CDN</h2>
-  <pre>
+    <h2>Via CDN</h2>
+    <pre>
     <code class='language-html'>
 &lt;!-- Popperjs --&gt;
 &lt;script src=&quot;https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js&quot; integrity=&quot;sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp&quot; crossorigin=&quot;anonymous&quot;&gt;&lt;/script&gt;
@@ -25,6 +17,22 @@
 &lt;link href=&quot;https://cdn.jsdelivr.net/gh/Eonasdan/tempus-dominus@v6-alpha14/dist/css/tempus-dominus.css&quot; rel=&quot;stylesheet&quot; crossorigin=&quot;anonymous&quot;&gt;
     </code>
 </pre>
+  </section>
+  <section>
+    <h2>Via NPM</h2>
+    <pre>
+    <code class="language-batch">
+      npm install @popperjs/core @eonasdan/tempus-dominus
+    </code>
+</pre>
+  </section>
+  <section>
+    <h2>Compiled Code</h2>
+    <p>
+      You can grab the compiled js and css from <a href='https://github.com/Eonasdan/tempus-dominus/tree/master/dist'
+                                                   target='_blank' rel='noopener'>GitHub</a>
+    </p>
+    <p>You still need to get Popper yourself.</p>
   </section>
   <section>
     <h2>Nuget Package</h2>
