fixed docs, plugin examples, add other locales

--- a/src/docs/partials/examples/jquery.html
+++ b/src/docs/partials/examples/jquery.html
@@ -277,34 +277,35 @@ $('#datetimepicker2').tempusDominus({
            <code class='language-javascript'>
 $('#datetimepicker2').tempusDominus({
      localization: {
-       today: &quot;Перейти сегодня&quot;,
-       clear: 'Очистить выделение',
-       close: 'Закрыть сборщик',
-       selectMonth: 'Выбрать месяц',
-       previousMonth: &quot;Предыдущий месяц&quot;,
-       nextMonth: &quot;В следующем месяце&quot;,
-       selectYear: 'Выбрать год',
-       previousYear: 'Предыдущий год',
-       nextYear: 'В следующем году',
-       selectDecade: 'Выбрать десятилетие',
-       previousDecade: 'Предыдущее десятилетие',
-       nextDecade: 'Следующее десятилетие',
-       previousCentury: 'Предыдущий век',
-       nextCentury: 'Следующий век',
-       pickHour: &quot;Выберите час&quot;,
-       incrementHour: 'Время увеличения',
-       decrementHour: 'Уменьшить час',
-       pickMinute: 'Выбрать минуту',
-       incrementMinute: 'Минута приращения',
-       decrementMinute: 'Уменьшить минуту',
-       pickSecond: 'Выбрать второй',
-       incrementSecond: 'Увеличение секунды',
-       decrementSecond: 'Уменьшение секунды',
-       togglePeriod: 'Переключить период',
-       selectTime: 'Выбрать время',
-       selectDate: 'Выбрать дату',
-       dayViewHeaderFormat: 'long',
-       locale: 'ru'
+        today: 'Перейти сегодня',
+        clear: 'Очистить выделение',
+        close: 'Закрыть сборщик',
+        selectMonth: 'Выбрать месяц',
+        previousMonth: 'Предыдущий месяц',
+        nextMonth: 'В следующем месяце',
+        selectYear: 'Выбрать год',
+        previousYear: 'Предыдущий год',
+        nextYear: 'В следующем году',
+        selectDecade: 'Выбрать десятилетие',
+        previousDecade: 'Предыдущее десятилетие',
+        nextDecade: 'Следующее десятилетие',
+        previousCentury: 'Предыдущий век',
+        nextCentury: 'Следующий век',
+        pickHour: 'Выберите час',
+        incrementHour: 'Время увеличения',
+        decrementHour: 'Уменьшить час',
+        pickMinute: 'Выбрать минуту',
+        incrementMinute: 'Минута приращения',
+        decrementMinute: 'Уменьшить минуту',
+        pickSecond: 'Выбрать второй',
+        incrementSecond: 'Увеличение секунды',
+        decrementSecond: 'Уменьшение секунды',
+        toggleMeridiem: 'Переключить период',
+        selectTime: 'Выбрать время',
+        selectDate: 'Выбрать дату',
+        dayViewHeaderFormat: { month: 'long', year: '2-digit' },
+        locale: 'ru',
+        startOfTheWeek: 1
      }
  });
            </code>
@@ -372,11 +373,12 @@ $('#datetimepicker2').tempusDominus({
           pickSecond: 'Выбрать второй',
           incrementSecond: 'Увеличение секунды',
           decrementSecond: 'Уменьшение секунды',
-          togglePeriod: 'Переключить период',
+          toggleMeridiem: 'Переключить период',
           selectTime: 'Выбрать время',
           selectDate: 'Выбрать дату',
-          dayViewHeaderFormat: 'long',
-          locale: 'ru'
+          dayViewHeaderFormat: { month: 'long', year: '2-digit' },
+          locale: 'ru',
+          startOfTheWeek: 1
         }
       });
     </script>
@@ -1984,7 +1986,7 @@ $('#containerDatePicker').tempusDominus({
 <page-meta>
   <title>Examples using jQuery</title>
   <post-date>07/08/2021</post-date>
-  <update-date>07/08/2021</update-date>
+  <update-date>02/05/2022</update-date>
   <excerpt>How to use Tempus Dominus datetime picker with jquery
   </excerpt>
   <tags>datepicker, javascript, open source, tempus dominus, eonasdan</tags>
