--- a/src/docs/templates/page-template.html
+++ b/src/docs/templates/page-template.html
@@ -40,6 +40,7 @@
             <li><a href='/6/namespace/errors.html' class='d-inline-flex align-items-center rounded'>Errors</a>
             </li>
             <li><a href='/6/namespace/events.html' class='d-inline-flex align-items-center rounded'>Events</a></li>
+            <li><a href='/6/namespace/unit.html' class='d-inline-flex align-items-center rounded'>Unit</a></li>
           </ul>
         </div>
       </li>
@@ -70,7 +71,7 @@
             <li><a href='/6/plugins/' class='d-inline-flex align-items-center rounded'>Overview</a>
             </li>
             <li><a href='/6/plugins/fa6.html' class='d-inline-flex align-items-center rounded'>Font Awesome 6</a></li>
-            </li>
+            <li><a href='/6/plugins/paint.html' class='d-inline-flex align-items-center rounded'>Custom classes</a></li>
           </ul>
         </div>
       </li>
